crates/simrs-interposer/src/snapshots/simrs_interposer__diff__tests__replay_results_debug.snap
---
source: crates/simrs-interposer/src/diff.rs
expression: output
---
apdu_1: [DataMismatch { sw: (144, 0), real_len: 2, shadow_len: 2 }]
apdu_2: [DataMismatch { sw: (144, 0), real_len: 2, shadow_len: 2 }]
