crates/simrs-interposer/src/snapshots/simrs_interposer__diff__tests__semantic_stats_mixed.snap
---
source: crates/simrs-interposer/src/diff.rs
expression: output
---
byte_level:
DivergenceStats {
    total_apdus: 3,
    matches: 3,
    sw_mismatches: 0,
    data_mismatches: 0,
    shadow_ignored: 0,
}
semantic:
SemanticDivergenceStats {
    semantic_matches: 2,
    semantic_mismatches: 0,
    schema_fallbacks: 1,
}
