crates/simrs-interposer/src/snapshots/simrs_interposer__diff__tests__stats_all_diverging.snap
---
source: crates/simrs-interposer/src/diff.rs
expression: "format!(\"{:#?}\", engine.stats)"
---
DivergenceStats {
    total_apdus: 3,
    matches: 0,
    sw_mismatches: 3,
    data_mismatches: 0,
    shadow_ignored: 0,
}
