crates/simrs-interposer/src/snapshots/simrs_interposer__diff__tests__stats_three_way_mixed.snap
---
source: crates/simrs-interposer/src/diff.rs
expression: "format!(\"{:#?}\", engine.stats)"
---
DivergenceStats {
    total_apdus: 4,
    matches: 2,
    sw_mismatches: 2,
    data_mismatches: 0,
    shadow_ignored: 0,
}
