crates/simrs-interposer/src/snapshots/simrs_interposer__diff__tests__stats_two_matching.snap
---
source: crates/simrs-interposer/src/diff.rs
expression: "format!(\"{:#?}\", engine.stats)"
---
DivergenceStats {
    total_apdus: 3,
    matches: 3,
    sw_mismatches: 0,
    data_mismatches: 0,
    shadow_ignored: 0,
}
